--- a/style.css
+++ b/style.css
@@ -170,8 +170,15 @@ strong {
 .right_arrow_icon {
   color: #bbb;
   cursor: pointer;
+  padding: 10px;
 }
 
+.right_arrow_icon:hover {
+  background-color: #454545;
+  padding: 10px;
+  /* color: black; */
+  border-radius: 50%;
+}
 .help_part {
   padding: 40px 20px;
 }
@@ -414,11 +421,17 @@ strong {
   border: 1px solid #c9f31d;
   cursor: pointer;
 }
-
-#works button {
-  margin-left: 480px;
+.see_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-top: 40px;
 }
+
+/* #works button {
+  margin-left: 480px;
+  margin-top: 40px;
+} */
 
 .work_icon {
   background-color: #070707;
@@ -429,6 +442,11 @@ strong {
   margin-top: 65px;
   cursor: pointer;
   font-size: 20px;
+}
+
+.work_icon:hover {
+  background-color: #454545;
+  border: 2px solid #070707;
 }
 
 .work_image {
